// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`known enemy comps — top-5 counter snapshots > Circuit Royal + double-sniper enemy 1`] = `
[
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "jetpack-cat",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "jetpack-cat",
    "kiriko",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "jetpack-cat",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "illari",
    "jetpack-cat",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "ana",
    "jetpack-cat",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > dive enemy with bans (Zarya + Brigitte banned) 1`] = `
[
  [
    "roadhog",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
  [
    "winston",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
  [
    "sigma",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
  [
    "roadhog",
    "cassidy",
    "reaper",
    "mizuki",
    "moira",
  ],
  [
    "winston",
    "cassidy",
    "reaper",
    "mizuki",
    "moira",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > mixed dive+poke enemy 1`] = `
[
  [
    "winston",
    "reaper",
    "sombra",
    "brigitte",
    "moira",
  ],
  [
    "winston",
    "reaper",
    "sombra",
    "kiriko",
    "moira",
  ],
  [
    "winston",
    "reaper",
    "sombra",
    "mizuki",
    "moira",
  ],
  [
    "doomfist",
    "reaper",
    "sombra",
    "brigitte",
    "moira",
  ],
  [
    "doomfist",
    "reaper",
    "sombra",
    "kiriko",
    "moira",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure brawl enemy 1`] = `
[
  [
    "mauga",
    "bastion",
    "pharah",
    "lucio",
    "wuyang",
  ],
  [
    "sigma",
    "bastion",
    "pharah",
    "baptiste",
    "lucio",
  ],
  [
    "sigma",
    "bastion",
    "pharah",
    "lucio",
    "mercy",
  ],
  [
    "mauga",
    "bastion",
    "pharah",
    "lucio",
    "mercy",
  ],
  [
    "ramattra",
    "bastion",
    "pharah",
    "lucio",
    "mercy",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure dive enemy 1`] = `
[
  [
    "zarya",
    "cassidy",
    "reaper",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "cassidy",
    "mei",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "mei",
    "reaper",
    "brigitte",
    "moira",
  ],
  [
    "roadhog",
    "cassidy",
    "mei",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "cassidy",
    "mei",
    "brigitte",
    "mizuki",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure poke enemy 1`] = `
[
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "kiriko",
    "mercy",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "mercy",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "juno",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > tank-busting enemy (Mauga + Reaper) 1`] = `
[
  [
    "sigma",
    "pharah",
    "widowmaker",
    "baptiste",
    "juno",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "kiriko",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "moira",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "juno",
  ],
  [
    "sigma",
    "mei",
    "pharah",
    "baptiste",
    "juno",
  ],
]
`;
